FIX: gap between buttons fixed equal on profile page

--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -71,10 +71,10 @@
   .site-footer {
 
     @include media-breakpoint-up($desktop-breakpoint) {
-      //position: fixed;
-      //bottom: 0;
-      //left: 0;
-      //right: 0;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
     }
 
     .container {
@@ -1130,13 +1130,13 @@
 
   .profile-message-btn {
     @include media-breakpoint-up($desktop-breakpoint) {
-      margin-right: -10px;
+      //margin-right: -10px;
     }
   }
 
   .subscribe-cost {
     opacity: 1;
-    min-width: 90px;
+    //min-width: 90px;
     color: $primary-color;
     transition: color 0.3s ease, opacity 0.3s ease;
 
@@ -1154,8 +1154,8 @@
     }
 
     @include media-breakpoint-up($desktop-breakpoint) {
-      width: 90px;
-      flex: 0 0 90px;
+      //width: 90px;
+      //flex: 0 0 90px;
       padding-bottom: 3px;
     }
   }
